creando versión desde VSC

--- a/demoLiveServer.html
+++ b/demoLiveServer.html
@@ -9,5 +9,6 @@
 <body>
     <p>Aprendiendo desarrollo WEB</p>
     <p>Es muy dificil pero se que vale la pena</p>
+    <p>Con la terminal hay que tener cuidado</p>
 </body>
 </html>
